# pc_annotation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
include/pc_annotation/: DrawGeometry.h  RenderOptionForAnnotation.h  VisualizerForAnnotation.h  VisualizerWithAnnotation.h
include/pc_annotation/shader/: GeometryRenderer.cpp  GeometryRenderer.h  PhongShader.cpp  PhongShader.h  PhongShaderForAnnotation.h  PointCloudRendererForAnnotation.h  ShaderWrapperForAnnotation.cpp  ShaderWrapperForAnnotation.h
pcd/: ycb_021_bleach_cleanser.pcd
scripts/: example.py
src/: DrawGeometry.cpp  GeometryRenderer.cpp  PhongShader.cpp  ShaderWrapperForAnnotation.cpp  VisualizerForAnnotation.cpp  VisualizerForAnnotationCallback.cpp  VisualizerWithAnnotation.cpp  main.cpp
src/shader/: GeometryRenderer.cpp  PhongShader.cpp  PhongShaderForAnnotation.cpp  PointCloudRendererForAnnotation.cpp  ShaderWrapperForAnnotation.cpp
